RESOLVED FIXED150172
Fix the ENABLE(SECCOMP_FILTERS) build after r187030
https://bugs.webkit.org/show_bug.cgi?id=150172
Summary Fix the ENABLE(SECCOMP_FILTERS) build after r187030
Csaba Osztrogonác
Reported 2015-10-15 08:35:50 PDT
../../Source/WebKit2/Shared/linux/SeccompFilters/Syscall.cpp:68:44: error: missing binary operator before token "(" #if defined(__has_builtin) && __has_builtin(__builtin_strlen) ^ ---> We should use nested #if's, because GCC's preprocessor don't like this construction at all. ../../Source/WebKit2/Shared/linux/SeccompFilters/Syscall.cpp: In function 'void WebKit::reportUnexpectedSyscall(unsigned int)': ../../Source/WebKit2/Shared/linux/SeccompFilters/Syscall.cpp:78:31: error: ignoring return value of 'ssize_t write(int, const void*, size_t)', declared with attribute warn_unused_result [-Werror=unused-result] ---> We should suppress this warning.
Attachments
Patch (1.93 KB, patch)
2015-10-15 08:52 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-10-15 08:52:57 PDT
Michael Catanzaro
Comment 2 2015-10-15 11:41:39 PDT
LGTM
Csaba Osztrogonác
Comment 3 2015-10-18 23:50:09 PDT
Comment on attachment 263162 [details] Patch Clearing flags on attachment: 263162 Committed r191278: <http://trac.webkit.org/changeset/191278>
Csaba Osztrogonác
Comment 4 2015-10-18 23:50:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.