Fix the ENABLE(SECCOMP_FILTERS) build after r187030 https://bugs.webkit.org/show_bug.cgi?id=150172

Reviewed by Alexey Proskuryakov.

* Shared/linux/SeccompFilters/Syscall.cpp:
(WebKit::reportUnexpectedSyscall):

Canonical link: https://commits.webkit.org/168448@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191278 268f45cc-cd09-0410-ab3c-d52691b4dbfc